# rgbpi_mediaplayer

./: .gitignore  README.md  dvdplayer_api.py  pyproject.toml  start_rgbpi_dvdplayer_python.sh  start_test_mode.sh  stop_test_mode.sh
runtime/: THIRD_PARTY_NOTICES.md  check_runtime_bundle.sh
runtime/linux-arm64-rootfs/lib/aarch64-linux-gnu/: libsmbconf.so.0
runtime/linux-arm64-rootfs/usr/lib/aarch64-linux-gnu/: libavdevice.so.58.10.100  libavfilter.so.7.85.100  libavformat.so.58.45.100  libavutil.so.56.51.100  libcap.so.2.44  libdcerpc-binding.so.0.0.1  libdvdcss.so.2.2.0  libfreetype.so.6.17.4  (+19 more)
runtime/node/linux-arm/: README.md
runtime/youtube_receiver/: package.json  sidecar.mjs
runtime/yt_dlp/: README.md
src/dvdplayer_python/: main.py
src/dvdplayer_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/dvdplayer_python/control/: server.py
src/dvdplayer_python/core/: debuglog.py  models.py  persistence.py
src/dvdplayer_python/media/: network_backend.py  plex_client.py  scanner.py  youtube_receiver.py
src/dvdplayer_python/playback/: session.py
src/dvdplayer_python/ui/: renderer.py
tests/: test_control_api.py  test_network.py  test_network_flow.py  test_overlay_menu.py  test_persistence.py  test_playback_session.py  test_renderer.py  test_resume_and_settings.py
tools/: analyze_screenshot_gemini.py  dvd_chapter3_proof.sh  install_runtime_deps.sh  overlay_matrix_validate.py  validate_rgbpi_player.sh
tools/node_runtime/linux-arm/: README.md
tools/youtube_receiver/: package-lock.json
tools/yt_dlp/: README.md
(+60 files in other folders)
